--- a/packages/ba63/package.json
+++ b/packages/ba63/package.json
@@ -22,8 +22,9 @@
   "scripts": {
     "build:js": "bun run build.ts",
     "build:types": "tsc",
-    "build": "bun run build:js && bun run build:types",
+    "build": "rm -rf ./dist && bun run build:js && bun run build:types",
     "package": "rm -rf ./dist && bun run build && bun pm pack",
+    "prepare": "bun run build",
     "test": "bun test"
   },
   "keywords": [
