fix: fixing type inference, stubbing out a couple of demos

--- a/packages/ba63/package.json
+++ b/packages/ba63/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ba63",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": {
     "name": "Caleb Perry",
     "url": "https://github.com/foxtrotperry",
@@ -44,5 +44,6 @@
   },
   "dependencies": {
     "node-hid": "^3.2.0"
-  }
+  },
+  "sideEffects": false
 }
