--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ba63:publish:dry": "bun --cwd='./packages/ba63' publish --dry-run",
     "demo": "bun --filter='demo' run start",
     "demo:chars": "bun --cwd='./packages/demo' run char-test.ts",
-    "demo:blocks": "bun --cwd='./packages/demo' run block-test.ts"
+    "demo:blocks": "bun --cwd='./packages/demo' run block-test.ts",
+    "demo:usCharSlider": "bun --cwd='./packages/demo' run us-char-slider.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
