--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,13 +44,13 @@ jobs:
         id: locate-tarball
         run: |
           ls -la packages/ba63
-          echo "PACKAGE_TGZ=$(ls packages/ba63/ba63-*.tgz)" >> $GITHUB_ENV
+          echo "tgz_location=$(ls packages/ba63/ba63-*.tgz)" >> $GITHUB_OUTPUT
 
       - name: Release ba63
         uses: ncipollo/release-action@v1.20.0
         if: ${{ inputs.perform_release || github.event_name == 'push' }}
         with:
-          artifacts: ${{ steps.locate-tarball.outputs.PACKAGE_TGZ }}
+          artifacts: ${{ steps.locate-tarball.outputs.tgz_location }}
           token: ${{ secrets.GITHUB_TOKEN }}
           generateReleaseNotes: true
           makeLatest: ${{ !env.MAKE_PRE_RELEASE }}
