--- a/packages/ba63/package.json
+++ b/packages/ba63/package.json
@@ -1,11 +1,7 @@
 {
   "name": "ba63",
   "version": "3.1.0",
-  "author": {
-    "name": "Caleb Perry",
-    "url": "https://github.com/foxtrotperry",
-    "email": "caleb@foxtrotperry.com"
-  },
+  "author": "Caleb Perry <caleb@foxtrotperry.com> (https://perry.sh)",
   "repository": "github.com/foxtrotperry/ba63",
   "type": "module",
   "files": [
